[package]
name = "wifiscanner"
version = "0.4.0"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "List WiFi hotspots in your area"
repository = "https://github.com/booyaa/wifiscanner"
documentation = "https://docs.rs/wifiscanner"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"
