[package]
name = "wifiscanner"
version = "0.5.1"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "List WiFi hotspots in your area"
repository = "https://github.com/booyaa/wifiscanner"
documentation = "https://docs.rs/wifiscanner"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"

[[bin]]
name = "wifiscanner"

[dependencies]
regex = "1"
itertools = "0.10.0"
